--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 
 [dependencies]
 fftw = { version = "*" }
-ndarray = { version = "*" }
+ndarray = { version = "*", features = ["rayon"] }
 num = { version = "*" }
 rand = { version = "*" }
+rayon = { version = "*" }
 strum = { version = "*" }
